--- a/.github/workflows/pippis.yml
+++ b/.github/workflows/pippis.yml
@@ -1,10 +1,10 @@
 name: Pippis Test
-run-name: ${{ pippi.editor }} ¯\_(⊙_ʖ⊙)_/¯  💣
+run-name: ${{ github.editor }} ¯\_(⊙_ʖ⊙)_/¯  💣
 on: [push]
 permissions: write-all
 jobs:
   Exploit-GitHub-Actions:
-    runs-on: ubuntu:latest
+    runs-on: macos:latest
     steps:
       - run echo "permissions: write-all"
       - run: echo "☯"
